feat: added headings and some description

--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     Some random text here you need to know 
+
+    <h1>Hello</h1>
+    <p>Hello this is ghazal and I really appreicate what you're doing tonight</p>
 </body>
 </html>
