--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     Some random text here you need to know 
 
-    <h1>Hello</h1>
+    <h1>Bookkify</h1>
     <p>Hello this is ghazal and I really appreicate what you're doing tonight</p>
 </body>
 </html>
